# counter

./: README.md  com.github.fkinoshita.Counter.json  meson.build
data/: com.github.fkinoshita.Counter.appdata.xml.in  com.github.fkinoshita.Counter.desktop.in  com.github.fkinoshita.Counter.gschema.xml  meson.build
data/icons/: meson.build
po/: POTFILES  meson.build
src/: counter-application.c  counter-application.h  counter-window.c  counter-window.h  counter-window.ui  counter.gresource.xml  main.c  meson.build
